// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scrollArea > renders with as correctly 1`] = `
"<section data-slot="root" data-orientation="vertical" class="">
  <div data-slot="viewport" class="">
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
  </div>
</section>"
`;

exports[`scrollArea > renders with class correctly 1`] = `
"<div data-slot="root" data-orientation="vertical" class="absolute">
  <div data-slot="viewport" class="">
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
  </div>
</div>"
`;

exports[`scrollArea > renders with default slot correctly 1`] = `
"<div data-slot="root" data-orientation="vertical" class="">
  <div data-slot="viewport" class="">Default slot</div>
</div>"
`;

exports[`scrollArea > renders with items correctly 1`] = `
"<div data-slot="root" data-orientation="vertical" class="">
  <div data-slot="viewport" class="">
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
  </div>
</div>"
`;

exports[`scrollArea > renders with orientation horizontal correctly 1`] = `
"<div data-slot="root" data-orientation="horizontal" class="">
  <div data-slot="viewport" class="">
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
  </div>
</div>"
`;

exports[`scrollArea > renders with orientation vertical correctly 1`] = `
"<div data-slot="root" data-orientation="vertical" class="">
  <div data-slot="viewport" class="">
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
  </div>
</div>"
`;

exports[`scrollArea > renders with shadow correctly 1`] = `
"<div data-slot="root" data-orientation="vertical" class="">
  <div data-slot="viewport" class="">
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
  </div>
</div>"
`;

exports[`scrollArea > renders with ui correctly 1`] = `
"<div data-slot="root" data-orientation="vertical" class="">
  <div data-slot="viewport" class="gap-4">
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
  </div>
</div>"
`;

exports[`scrollArea > renders with virtualize boolean correctly 1`] = `
"<div data-slot="root" data-orientation="vertical" class="">
  <div data-slot="viewport" class="" style="position: relative; inline-size: 100%; block-size: 300px;"></div>
</div>"
`;

exports[`scrollArea > renders with virtualize gap correctly 1`] = `
"<div data-slot="root" data-orientation="vertical" class="">
  <div data-slot="viewport" class="" style="position: relative; inline-size: 100%; block-size: 320px;"></div>
</div>"
`;

exports[`scrollArea > renders with virtualize lanes correctly 1`] = `
"<div data-slot="root" data-orientation="vertical" class="">
  <div data-slot="viewport" class="" style="position: relative; inline-size: 100%; block-size: 100px;"></div>
</div>"
`;

exports[`scrollArea > renders with virtualize object correctly 1`] = `
"<div data-slot="root" data-orientation="vertical" class="">
  <div data-slot="viewport" class="" style="position: relative; inline-size: 100%; block-size: 150px;"></div>
</div>"
`;

exports[`scrollArea > renders with virtualize padding correctly 1`] = `
"<div data-slot="root" data-orientation="vertical" class="">
  <div data-slot="viewport" class="" style="position: relative; inline-size: 100%; block-size: 340px;"></div>
</div>"
`;

exports[`scrollArea > renders with virtualize scrollMargin correctly 1`] = `
"<div data-slot="root" data-orientation="vertical" class="">
  <div data-slot="viewport" class="" style="position: relative; inline-size: 100%; block-size: 300px;"></div>
</div>"
`;
